T2-1193 new SPI-backed password dialogue for credential manager
git-svn-id: https://taverna.googlecode.com/svn/taverna/engine/net.sf.taverna.t2.security/trunk@9767 bf327186-88b3-11dd-a302-d386e5130c1c